<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/txtAltura"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputAltura"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/hint_altura"/>
    <TextView
            android:text="@string/txtPeso"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputAltura" app:layout_constraintEnd_toEndOf="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/inputAltura"
    />
    <TextView
            android:text="@string/txtSexo"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/inputAltura"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPeso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputPeso"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:hint="@string/hint_peso"/>
    <Button
            android:text="@string/btnCalcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular"
            app:layout_constraintStart_toStartOf="@+id/inputPeso"
            app:layout_constraintEnd_toEndOf="@+id/inputPeso" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/spSexo"/>
    <Button
            android:text="@string/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLimpar"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcular"/>
    <Spinner
            android:entries="@array/sexos"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/spSexo"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5"/>

</androidx.constraintlayout.widget.ConstraintLayout>