<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultadoActivity">

    <TextView
            android:text="@string/title"
            style="@style/label_resultado"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:textSize="24sp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/ivIMC"
            android:layout_marginLeft="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/masc_extremo_obeso"
            android:id="@+id/ivIMC"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginTop="72dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvDev" app:layout_constraintVertical_bias="0.292"/>
    <TextView
            android:text="20.1"
            style="@style/label_resultado"
            android:layout_width="wrap_content"
            android:textSize="88sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvIMC"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivIMC" android:layout_marginTop="96dp"
            app:layout_constraintStart_toEndOf="@+id/ivIMC" android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            style="@style/label_resultado"
            android:text="@string/txtPesoIdeal"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvIMC"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="@+id/tvIMC" app:layout_constraintEnd_toEndOf="@+id/tvIMC"/>
    <TextView
            style="@style/label_resultado"
            android:textSize="17sp"
            android:text="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDev" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>